	PR bootstrap/45444 	* config/arm/arm.c (locate_neon_builtin_icode): Initialize key. 	(arm_output_asm_insn) Add ATTRIBUTE_PRINTF_4.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166753 138bc75d-0d04-0410-961f-82ee72b054a4